# open-notebook

./: .env.example  .gitignore  app_home.py  manage.py  migrate.py  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml  run_api.py
api/: auth.py  client.py  command_service.py  context_service.py  embedding_service.py  episode_profiles_service.py  insights_service.py  main.py  models.py  models_service.py  notebook_service.py  notes_service.py  podcast_api_service.py  podcast_service.py  search_service.py  settings_service.py  sources_service.py  transformations_service.py
api/routers/: commands.py  context.py  embedding.py  episode_profiles.py  insights.py  models.py  notebooks.py  notes.py  podcasts.py  search.py  settings.py  sources.py  speaker_profiles.py  transformations.py
commands/: __init__.py  example_commands.py  podcast_commands.py
open_notebook/: config.py  exceptions.py  logging.py  utils.py
open_notebook/database/: async_migrate.py  migrate.py  models.py  repository.py  seed.py  sql.py
open_notebook/domain/: base.py  content_settings.py  models.py  notebook.py  podcast.py  transformation.py
open_notebook/graphs/: ask.py  chat.py  prompt.py  source.py  tools.py  transformation.py  utils.py
open_notebook/plugins/: podcasts.py
open_notebook/services/: podcast_worker.py  vector.py
pages/: 10_⚙️_Settings.py  2_📒_Notebooks.py  3_🔍_Ask_and_Search.py  5_🎙️_Podcasts.py  7_🤖_Models.py  8_💱_Transformations.py
pages/components/: __init__.py  model_selector.py  note_panel.py  source_insight.py  source_panel.py
scripts/: ensure_pgvector.py
(+6 files in other folders)
